@@ -1,7 +1,5 @@
 #include <_ansi.h>
-
-/* internal function to translate JP to Unicode */
-wint_t _EXFUN (_jp2uc, (wint_t));
+#include <../ctype/local.h>
 
 /* internal function to compute width of wide char. */
 int _EXFUN (__wcwidth, (wint_t));
